--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# personal rules
+results/**
 
 # Created by https://www.gitignore.io/api/python,pycharm
 # Edit at https://www.gitignore.io/?templates=python,pycharm
