--- a/config/ground_detection/hybrid.yaml
+++ b/config/ground_detection/hybrid.yaml
@@ -1,15 +1,14 @@
 name: "hybrid"
-lambda: 0.20
-knn_graph:
-  k: 10
+threshold: 0.20
+knn_graph: 10
 spherical_graph:
   nb_layers: 64
   res_yaw: 2048
 normals:
-  method: 'pca'
-  k: 30
+  method_normals: 'pca'
+  knn_normal: 30
 merge:
-  min_size: 40
-  ransac_max_dist: 0.15
-  ransac_it: 100
-  inter_size: 0.5
+  cc_min_size: 20
+  ransac_max_dist: 0.20
+  ransac_max_it: 100
+  inter_perc: 0.5
