--- a/config/ground_detection/cnn.yaml
+++ b/config/ground_detection/cnn.yaml
@@ -1,19 +1,23 @@
-sensor:
-    name: "HDL64"
-    proj_type: "layers" # projective
-    nb_layers: 64
-    fov_up: 85.0
-    fov_down: 115.0
-    res_yaw: 2048
-    res_pitch: 64
-    img_prop:
-      width: 2048
-      height: 64
-    img_means: #range,z,signal
-      - 12.12
-      - -1.04
-      - 0.21
-    img_stds: #range,z,signal
-      - 12.32
-      - 0.86
-      - 0.16
+name: "unet_gt_normals"
+projection:
+  proj_type: 'layers'
+  res_yaw: 2048
+  nb_layers: 64
+img_means: #range,z,signal
+  - 12.12
+  - -1.04
+  - 0.21
+img_stds: #range,z,signal
+  - 12.32
+  - 0.86
+  - 0.16
+add_normals: True
+model:
+  n_channels: 6
+  n_classes: 1
+  n_filters: 8
+  scale:
+    - 1
+    - 2
+weights: '/home/leonardo/Dev/github/smutsia/ckpt/ground_detection/best_model.pth'
+gpu: 0
