--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # personal rules
 results/**
-
+tmp/**
 # Created by https://www.gitignore.io/api/python,pycharm
 # Edit at https://www.gitignore.io/?templates=python,pycharm
 
