--- a/config/ground_detection/unet.yaml
+++ b/config/ground_detection/unet.yaml
@@ -1,6 +1,6 @@
 name: "unet_gt"
 projection:
-  proj_type: 'layers'
+  proj_type: 'conv'
   res_yaw: 2048
   nb_layers: 64
 img_means: #range,z,signal
